[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
colorama = "^0.4.6"
requests = "^2.31.0"
bcrypt = "^4.1.2"
colored = "^2.2.4"
termcolor = "^2.4.0"
numpy = "^1.26.4"
dask = "^2024.3.1"
numba = "^0.59.0"
scipy = "^1.12.0"
flask = "^3.0.2"
questionary = "^2.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"